# app/Models/Student.php
@@ -32,6 +32,6 @@ class Student extends Model
 
     public function school(): BelongsTo
     {
-        return $this->belongsTo(School::class, 'school_id');
+        return $this->belongsTo(School::class);
     }
 }
